--- a/Comfy/assets/_navbar.scss
+++ b/Comfy/assets/_navbar.scss
@@ -63,9 +63,9 @@
           }
           &.main-likedSongsButton-likedSongsIcon {
             background: linear-gradient(
-              135deg,
-              var(--spice-liked-left),
-              var(--spice-liked-right)
+              149.46deg,
+              var(--spice-liked-left) 35%,
+              var(--spice-liked-right) 99.16%
             );
             border-style: solid;
             border-width: 2px;
@@ -260,7 +260,7 @@
 
           & > div:nth-child(2) {
             background-color: rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            border-radius: var(--border-radius);
 
             .main-rootlist-rootlistItem {
               padding: 0;
@@ -289,7 +289,7 @@
                 &Active + *,
                 &:focus + *,
                 &:hover + * {
-                  background-color: #5c6eb12a;
+                  background-color: rgba(var(--spice-rgb-playlist-hover), 0.16);
                 }
               }
 
@@ -323,10 +323,6 @@
 
   // Scrollbar
   .os-scrollbar {
-    top: 52px;
-    bottom: 38px;
-    border-top-right-radius: calc(var(--border-radius) + 5px);
-    border-bottom-right-radius: calc(var(--border-radius) + 5px);
-    overflow: hidden;
+    display: none;
   }
 }
